# LogProfiler

./: .gitignore  CMakeLists.txt  readme.md
src/: qt_vs_spdlog_vs_g3log.cpp
src/include/spdlog/details/: async_logger_impl.h  fmt_helper.h  log_msg.h  logger_impl.h  pattern_formatter.h  thread_pool.h
